# pa-ping

./: Changelog  README.md
doc/: Makefile.am  paping.1  paping.txt
doc/pt_BR/: paping.1  paping_pt_BR.txt
src/: Makefile.am  arguments.cpp  arguments.h  host.cpp  host.h  main.cpp  net_compat.cpp  net_compat.h  resolver.cpp  resolver.h  socket.cpp  socket.h  standard.h
