bin_PROGRAMS = paping
paping_SOURCES = \
				 arguments.cpp \
				 net_compat.h \
				 net_compat.cpp \
				 resolver.h \
				 resolver.cpp \
				 host.cpp \
				 i18n.cpp \
				 main.cpp \
				 print.cpp \
				 socket.cpp \
				 stats.cpp \
				 timer.cpp

distclean-local:
	-rm -f *~ \
	Makefile.in \
	config.h.in
